--- a/index.html
+++ b/index.html
@@ -62,5 +62,5 @@ Bitcoin Donation: 16CowvxvLSR4BPEP9KJZiR622UU7hGEce5
 
 <!-- Future home of MJ420s Cannabis Cigarettes - One day, Cannabis will be legal to consume in The United States, and when that happens, we will be
 ready to provide -->
-<center> &#169;MJ420  Type your favorite number ;)</center>
-<center> &#169;420JAVA  Type your favorite number ;)</center>
+<center> Type your favorite number ;)</center>
+<center> &#169;MJ420 / &#169;420JAVA</center>
